# halo2-kzg-srs

./: Cargo.toml  README.md
.github/workflows/: ci.yaml
src/: arithmetic.rs  lib.rs  util.rs
src/fixture/perpetual-powers-of-tau/: bn254-8
tests/: validate_converted.rs
