[package]
name = "halo2_kzg_srs"
version = "0.1.0"
edition = "2021"

[dependencies]
byteorder = "1.4.3"
halo2_curves = { git = 'https://github.com/privacy-scaling-explorations/halo2curves', tag = "0.3.0", package = "halo2curves" }
num-bigint = "0.4.3"
rand_core = "0.6.3"
rayon = "1.5.3"

[dev-dependencies]
hyper = { version = "0.14", features = ["tcp", "client", "http1"] }
tokio = { version = "1", features = ["rt", "net", "macros"] }
hyper-tls = "0.5"
